[package]
name = "pressure_monitor"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.3"
plotters = { git = "https://github.com/38/plotters.git", default_features = false, features = ["ttf", "line_series"]}
plotters-bitmap = { version = "^0.3.*", default_features = false }
rumqttc = "0.10"
csv = "1.1.6"
clap = { version = "3.1.8", features = ["derive"] }